--- a/home.css
+++ b/home.css
@@ -8,3 +8,13 @@ img{
     width:300px;
     height:100px;       
 }
+
+.welcome-image{
+    width:1100px;
+    height:600px;
+    margin-bottom: 20px;
+}
+
+.pt-5{
+    margin-top: 0px;
+}
