--- a/home.css
+++ b/home.css
@@ -10,9 +10,9 @@ img{
 }
 
 .welcome-image{
-    width:1100px;
-    height:600px;
-    margin-bottom: 20px;
+    width:68em;
+    height:30em;
+    margin-bottom: 2em;
 }
 
 .pt-5{
