--- a/complex.css
+++ b/complex.css
@@ -10,12 +10,18 @@ hr {
 }
 .complex-number{
     padding-right: 100px;
+    position:static;
 }
 
 .container{
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+
+#calculator{
+    border: 2px solid #024656;
+    border-radius: 8px;
 }
 
 h3 {
@@ -27,8 +33,8 @@ h3 {
 }
 #clear{
 }
-.btn btn-primary{
-
+#id{
+    background:red !important;
 }
 .btn btn-primary:hover{
     transform: scale(1.1);
