--- a/home.css
+++ b/home.css
@@ -12,9 +12,15 @@ img{
 .welcome-image{
 
     width:100%;
-    height:30em;
+    height:auto;
     margin-bottom: 2em;
     float:left;
+}
+
+
+
+#welcome-div{
+    position: relative;
 }
 
 .pt-5{
@@ -23,3 +29,6 @@ img{
 * {
     box-sizing: border-box;
 }
+
+.col-lg-7 col-xl-7 ml-xl-4 mb-4{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);}
