--- a/landing.css
+++ b/landing.css
@@ -30,7 +30,7 @@ hr {
 
 header.startup {
     background-position: center;
-    background-image: url("header.jpg");
+    background-image: url("cover.JPG");
     background-size: cover;
     height: 100%;
 }
