--- a/complex.css
+++ b/complex.css
@@ -17,6 +17,10 @@ hr {
     display:inline-block ;
 }
 
+body {
+    font-family: 'Pangolin', cursive;
+}
+
 .container{
     display:flex;
     flex-wrap: wrap;
