--- a/gallery.css
+++ b/gallery.css
@@ -16,6 +16,11 @@ main{
     padding-top:65px;
 }
 
+.col-center{
+    float: none;
+    margin: 0 auto;
+}
+
 .container{
     display:flex;
     flex-wrap: wrap;
